--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,17 @@
 buildscript {
     repositories {
+	maven { url "file:/opt/android-studio/gradle/m2repository" }
         mavenCentral()
+	google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
 apply plugin: 'com.android.application'
 
 repositories {
+    maven { url "file:/opt/android-studio/gradle/m2repository" }
     mavenCentral()
     mavenLocal()
     maven {
@@ -35,8 +38,8 @@ dependencies {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 24
