--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -45,8 +45,14 @@
             </intent-filter>
             <intent-filter android:label="@string/play_with_droidupnp">
                 <action android:name="android.intent.action.SEND" />
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
                 <data android:mimeType="video/*" />
+                <data android:scheme="file" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data android:host="*" />
             </intent-filter>
         </activity>
         <activity
